--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nordic-game-lab/web-crawler",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "crawler.js",
   "scripts": {
@@ -9,6 +9,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/nordic-game-lab/web-crawler.git"
+  },
+  "bin": {
+    "crawler": "./crawler.js"
   },
   "keywords": [],
   "author": "Nordic Game Lab LLC",
