--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.0.0",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
+    "puppeteer": "^23.5.3",
     "robots-parser": "^3.0.1",
     "yargs": "^17.7.2"
   }
